feat(projects): create projects on audio upload
